[package]
name = "cheetah-curve"
version = "0.3.2"
edition = "2021"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
description = "Cheetah elliptic curve (sextic extension of the Goldilocks field) + Tip5 hash + Goldilocks field arithmetic — the cryptographic primitives behind Nockchain's key-prefixed Schnorr signatures. Vendored from nockchain-math; no Nock VM dependency."
readme = "README.md"
keywords = ["cryptography", "schnorr", "nockchain", "goldilocks", "tip5"]
categories = ["cryptography"]
authors = ["@nocktoshi", "Zorp Corp"]
repository = "https://github.com/nocktoshi/cheetah"

[dependencies]
crypto-bigint = { version = "0.7.4", default-features = false, features = ["zeroize", "subtle"] }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
bs58 = "0.5.1"
arrayref = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
serde_json = "1.0"
